# hospital-management-system

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: ollama_client.py
backend/app/common/: schemas.py
backend/app/core/: config.py  database.py  init_db.py  middleware.py  models.py  security.py
backend/app/domains/: chatbot.py  notifications.py
backend/app/domains/admin/: router.py  schemas.py  service.py
backend/app/domains/auth/: router.py  schemas.py  service.py
backend/app/domains/doctor/: router.py  schemas.py  service.py
backend/app/domains/patient/: router.py  schemas.py  service.py
backend/app/domains/pharmacy/: router.py  schemas.py  service.py
backend/app/domains/staff/: router.py  schemas.py  service.py
docs/: ai_features.md  api_reference.md  architecture.md  database.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/features/admin/components/: AccountRequests.jsx  AdminOverview.jsx  AssignAdmin.jsx  RegisterHospital.jsx  UserManagement.jsx  (+2 more)
frontend/src/pages/: DoctorDashboard.jsx  HmsAdminDashboard.jsx  HospitalAdminDashboard.jsx  PatientDashboard.jsx  PharmacyDashboard.jsx  StaffDashboard.jsx
frontend/src/pages/LandingPage/: LandingPage.jsx
frontend/src/shared/api/: api.js
frontend/src/shared/components/: AIBanner.jsx  AIChatbot.jsx  Navbar.jsx  NotificationBell.jsx  ProtectedRoute.jsx  Sidebar.jsx
frontend/src/shared/styles/: home.css  index.css
(+11 files in other folders)
