[project]
name = "hms-backend"
version = "0.1.0"
description = "Hospital Management System - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = []
